tests/fixtures/valid/advanced/types/none_operations.py
# Test None operations and comparisons
x: None = None
y: None = None
print(x == y)
print(x == None)
print(None == None)
print(x != 1)
print(None != 1)
