tests/fixtures/invalid/pow_none_float.py
# Cannot call pow() with None, Float
x = pow(None, 1.0)
